fix(theme): increase sourcecode contrast

--- a/assets/style/code.scss
+++ b/assets/style/code.scss
@@ -42,7 +42,7 @@ pre {
 
 	.kc, .mi {
 		/* const / operator */
-		color: green;
+		color: darkgreen;
 		@media (prefers-color-scheme: dark) {
 			color: lightgreen;
 		}
